CMAKE_MINIMUM_REQUIRED(VERSION 3.4)
PROJECT(chrysocyon)

FILE(GLOB CORE "${CMAKE_CURRENT_SOURCE_DIR}/include/core/*.hpp" "${CMAKE_CURRENT_SOURCE_DIR}/include/core/*.inl")
FILE(GLOB SIGNALS "${CMAKE_CURRENT_SOURCE_DIR}/include/signal/*.hpp" "${CMAKE_CURRENT_SOURCE_DIR}/include/signal/*.inl")
FILE(GLOB STORAGE "${CMAKE_CURRENT_SOURCE_DIR}/include/storage/*.hpp" "${CMAKE_CURRENT_SOURCE_DIR}/include/storage/*.inl")

SOURCE_GROUP("core" FILES ${CORE})
SOURCE_GROUP("signals" FILES ${SIGNALS}) 
SOURCE_GROUP("storage" FILES ${STORAGE})

ADD_LIBRARY(chrysocyon INTERFACE ${CORE} ${SIGNALS} ${STORAGE})
TARGET_INCLUDE_DIRECTORIES(chrysocyon PRIVATE "${CMAKE_CURRENT_SOURCE_DIR}/include")
TARGET_INCLUDE_DIRECTORIES(chrysocyon PUBLIC $<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}/chrysocyon>)
IF(MSVC)
TARGET_COMPILE_OPTIONS(chrysocyon PUBLIC "/std:c++17")
ELSE()
TARGET_COMPILE_OPTIONS(chrysocyon PUBLIC "-std=c++17")
ENDIF()

INSTALL(DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/include/" DESTINATION "${CMAKE_INSTALL_INCLUDEDIR}/chrysocyon/")
